--- a/llm-services/pyproject.toml
+++ b/llm-services/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.23.2"
 langserve = {extras = ["server"], version = ">=0.0.30"}
 pydantic = "<2"
 issue-explanation = {path = "packages/issue-explanation", develop = true}
+rag-pinecone = {path = "packages/rag-pinecone", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 langchain-cli = ">=0.0.15"
